# fcmcfc

./: .gitignore  .gitmodules  README.md  SensorList.md  Vagrantfile
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  box_meta  id  index_uuid  synced_folders  vagrant_cwd
mission-apps/: README.md  fake_config.toml
mission-apps/bspace-imu-service/: Cargo.toml
mission-apps/bspace-imu-service/src/: main.rs  model.rs  schema.rs
mission-apps/collect-telemetry/: Cargo.toml  README.md  manifest.toml
mission-apps/collect-telemetry/src/: main.rs
mission-apps/fake-monitor/: Cargo.toml
mission-apps/fake-monitor/data/: meminfo
mission-apps/fake-monitor/src/: main.rs  meminfo.rs  objects.rs  schema.rs
mission-apps/telemetry/: Cargo.toml  README.md  manifest.toml
vagrant-generic/: Vagrantfile
