[package]
name = "bspace-imu-service"
version = "0.1.0"
authors = ["gpi <gpimpale29@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
juniper = "0.11"
juniper_warp = "0.2.0"
kubos-service = { path = "../../kubos/services/kubos-service" }
log = "^0.4.0"
warp = "0.1.12"
failure = "0.1.2"
